--- a/content/lessons/05/Now-You-Code/NYC4-Guess-A-Number.ipynb
+++ b/content/lessons/05/Now-You-Code/NYC4-Guess-A-Number.ipynb
@@ -1,153 +1,113 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Now You Code 4: Guess A Number\n",
-    "\n",
-    "Write a program to play the classic \"Guess a number\" game.\n",
-    "\n",
-    "In this game the computer selects a random number between 1 and 10.\n",
-    "It's your job to guess the number. Whenever you guess, the computer will\n",
-    "give you a hint of higher or lower. This process repeats until you guess\n",
-    "the number, after which the computer reports the number of guesses it took you.\n",
-    "\n",
-    "For Example:\n",
-    "\n",
-    "I'm thinking of a number between 1 and 10...\n",
-    "Your guess: 5\n",
-    "Too low. Guess higher.\n",
-    "Your guess: 7\n",
-    "Too high. Guess lower.\n",
-    "Your guess: 6\n",
-    "You guessed it in 3 tries.\n",
-    "\n",
-    "Your loop should continue until your input guess equals the\n",
-    "computer generated random number.\n",
-    "\n",
-    "### How do you make Python generate a random number? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "# Now You Code 4: Guess A Number\n\nWrite a program to play the classic \"Guess a number\" game.\n\nIn this game the computer selects a random number between 1 and 10.\nIt's your job to guess the number. Whenever you guess, the computer will\ngive you a hint of higher or lower. This process repeats until you guess\nthe number, after which the computer reports the number of guesses it took you.\n\nFor Example:\n\nI'm thinking of a number between 1 and 10...\nYour guess: 5\nToo low. Guess higher.\nYour guess: 7\nToo high. Guess lower.\nYour guess: 6\nYou guessed it in 3 tries.\n\nYour loop should continue until your input guess equals the\ncomputer generated random number.\n\n### How do you make Python generate a random number? "
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "# Sample code which demostrates how to generate a number between 1 and 10\nimport random \nnumber = random.randint(1,10)\nprint(number)",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "7\n",
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "Run the cell above a couple of times. Notice how each time you execute the code, it comes up with a different number. \n\nHere's a breakdown of the code\n\n```\nline 1 imports the random module\nline 2 randomly selects an integer between 1 and 10\nline 3 prints the number\n```\n\nNow that you understand how to generate a random number, try to design then write code for the program. The first step in your program should be to generate the random number."
+    },
+    {
+      "metadata": {
+        "collapsed": true
+      },
+      "cell_type": "markdown",
+      "source": "## Step 1: Problem Analysis \n\nInputs:\n\nOutputs: a random number\n\nAlgorithm (Steps in Program): set int to random, print number\n\n\n"
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "import random \nnumber = random.randint(1,100)\nattempts=0\n\nwhile True: \n    guess=int(input(\"try to guess the number i am thinking of: \"))\n    attempts=attempts+1\n    print(\"attempt count: \",attempts)\n    if (number==guess):\n        print(\"correct!!!\")",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "try to guess the number i am thinking of: 1\nattempt count:  1\ntry to guess the number i am thinking of: 2\nattempt count:  2\ntry to guess the number i am thinking of: 3\nattempt count:  3\ntry to guess the number i am thinking of: 4\nattempt count:  4\ntry to guess the number i am thinking of: 5\nattempt count:  5\ntry to guess the number i am thinking of: 6\nattempt count:  6\ntry to guess the number i am thinking of: 04\nattempt count:  7\ntry to guess the number i am thinking of: 349\nattempt count:  8\ntry to guess the number i am thinking of: 90\nattempt count:  9\ntry to guess the number i am thinking of: 0\nattempt count:  10\ntry to guess the number i am thinking of: -\n"
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "invalid literal for int() with base 10: '-'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-7f22c604ee51>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mguess\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"try to guess the number i am thinking of: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mattempts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mattempts\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"attempt count: \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mattempts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '-'"
+          ]
+        }
+      ]
+    },
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "## Step 3: Questions\n\n1. Which loop did you use to solve the problem? What is a definite or indefinite loop?\n2. Modify this program to allow you to guess a number between 1 and 100. How much of your code did you need to change to make this work? \n3. This program is a good example of a difficult problem to conceptualize which has a simple solution when you look at actual lines of code. I assume you did not write this in a single try, so explain where you got stuck and describe your approach to overcoming it.\n"
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "#1. i used a while true loop\n#2. i need only to add a 0 to the 10 i had in the (1,10) to (1,100)\n#3. bold of you to assume i didnt get this in one go. just kidding, i mistyped trying to get guess to match number, but with a small tweak, it worked. ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "## Reminder of Evaluation Criteria\n\n1. What the problem attempted (analysis, code, and answered questions) ?\n2. What the problem analysis thought out? (does the program match the plan?)\n3. Does the code execute without syntax error?\n4. Does the code solve the intended problem?\n5. Is the code well written? (easy to understand, modular, and self-documenting, handles errors)\n"
+    },
+    {
+      "metadata": {
+        "collapsed": true,
+        "trusted": false
+      },
+      "cell_type": "code",
+      "source": "#1. the problem was to guess a number that the computer thought (at random of course)\n#2. the program matches the plan\n#3. if the user typed a number in word for, the program will encounter error\n#4. the code solves the original problem of guessing a number\n#5. the code cannot handle numbers that are not in standard form, but it is written well.",
+      "execution_count": null,
+      "outputs": []
     }
-   ],
-   "source": [
-    "# Sample code which demostrates how to generate a number between 1 and 10\n",
-    "import random \n",
-    "number = random.randint(1,10)\n",
-    "print(number)"
-   ]
+  ],
+  "metadata": {
+    "anaconda-cloud": {},
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3",
+      "language": "python"
+    },
+    "language_info": {
+      "mimetype": "text/x-python",
+      "nbconvert_exporter": "python",
+      "name": "python",
+      "file_extension": ".py",
+      "version": "3.5.4",
+      "pygments_lexer": "ipython3",
+      "codemirror_mode": {
+        "version": 3,
+        "name": "ipython"
+      }
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Run the cell above a couple of times. Notice how each time you execute the code, it comes up with a different number. \n",
-    "\n",
-    "Here's a breakdown of the code\n",
-    "\n",
-    "```\n",
-    "line 1 imports the random module\n",
-    "line 2 randomly selects an integer between 1 and 10\n",
-    "line 3 prints the number\n",
-    "```\n",
-    "\n",
-    "Now that you understand how to generate a random number, try to design then write code for the program. The first step in your program should be to generate the random number."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## Step 1: Problem Analysis \n",
-    "\n",
-    "Inputs:\n",
-    "\n",
-    "Outputs:\n",
-    "\n",
-    "Algorithm (Steps in Program):\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "# Step 2: write code for program\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 3: Questions\n",
-    "\n",
-    "1. Which loop did you use to solve the problem? What is a definite or indefinite loop?\n",
-    "2. Modify this program to allow you to guess a number between 1 and 100. How much of your code did you need to change to make this work? \n",
-    "3. This program is a good example of a difficult problem to conceptualize which has a simple solution when you look at actual lines of code. I assume you did not write this in a single try, so explain where you got stuck and describe your approach to overcoming it.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reminder of Evaluation Criteria\n",
-    "\n",
-    "1. What the problem attempted (analysis, code, and answered questions) ?\n",
-    "2. What the problem analysis thought out? (does the program match the plan?)\n",
-    "3. Does the code execute without syntax error?\n",
-    "4. Does the code solve the intended problem?\n",
-    "5. Is the code well written? (easy to understand, modular, and self-documenting, handles errors)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "anaconda-cloud": {},
-  "kernelspec": {
-   "display_name": "Python [default]",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "nbformat": 4,
+  "nbformat_minor": 1
 }
